crates/plotnik-lib/tests/03-analyze/direct_recursion/no_escape_under_lazy_plus_quantifier.txt
E = (call (E)+?)
==== diagnostics ====
error: infinite recursion: no escape path
 --> query.ptk:1:12
  |
1 | E = (call (E)+?)
  |            ^
  |            |
  |            E references itself
  |
help: add a non-recursive branch to terminate: `[Base: ... Rec: (Self)]`
==== symbols ====
E
  E (cycle)
